libcdi/src/mo_cdi.f90

          integer(kind=c_int), value :: varID
          real(kind=c_double), value :: scalefactor
        end subroutine vlistDefVarScalefactor
      end interface
      interface
        function vlistInqVarScalefactor(vlistID,varID) bind(c,name='vlistInqVarScalefactor')
          import :: c_int,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          real(kind=c_double) :: vlistInqVarScalefactor
        end function vlistInqVarScalefactor
      end interface
      interface
        subroutine vlistDefVarAddoffset(vlistID,varID,addoffset) bind(c,name='vlistDefVarAddoffset')
          import :: c_int,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          real(kind=c_double), value :: addoffset
        end subroutine vlistDefVarAddoffset
      end interface
      interface
        function vlistInqVarAddoffset(vlistID,varID) bind(c,name='vlistInqVarAddoffset')
          import :: c_int,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          real(kind=c_double) :: vlistInqVarAddoffset
        end function vlistInqVarAddoffset
      end interface
      interface
        subroutine vlistDefVarTimave(vlistID,varID,timave) bind(c,name='vlistDefVarTimave')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: timave
        end subroutine vlistDefVarTimave
      end interface
      interface
        function vlistInqVarTimave(vlistID,varID) bind(c,name='vlistInqVarTimave')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarTimave
        end function vlistInqVarTimave
      end interface
      interface
        subroutine vlistDefVarTimaccu(vlistID,varID,timaccu) bind(c,name='vlistDefVarTimaccu')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: timaccu
        end subroutine vlistDefVarTimaccu
      end interface
      interface
        function vlistInqVarTimaccu(vlistID,varID) bind(c,name='vlistInqVarTimaccu')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarTimaccu
        end function vlistInqVarTimaccu
      end interface
      interface
        subroutine vlistDefVarTypeOfGeneratingProcess(vlistID,varID,typeOfGeneratingProcess) bind(c,&
       name='vlistDefVarTypeOfGeneratingProcess')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: typeOfGeneratingProcess
        end subroutine vlistDefVarTypeOfGeneratingProcess
      end interface
      interface
        function vlistInqVarTypeOfGeneratingProcess(vlistID,varID) bind(c,name='vlistInqVarTypeOfGeneratingProcess')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarTypeOfGeneratingProcess
        end function vlistInqVarTypeOfGeneratingProcess
      end interface
      interface
        subroutine vlistDefVarProductDefinitionTemplate(vlistID,varID,productDefinitionTemplate) bind(c,&
       name='vlistDefVarProductDefinitionTemplate')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: productDefinitionTemplate
        end subroutine vlistDefVarProductDefinitionTemplate
      end interface
      interface
        function vlistInqVarProductDefinitionTemplate(vlistID,varID) bind(c,name='vlistInqVarProductDefinitionTemplate')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarProductDefinitionTemplate
        end function vlistInqVarProductDefinitionTemplate
      end interface
      interface
        function vlistInqVarSize(vlistID,varID) bind(c,name='vlistInqVarSize')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarSize
        end function vlistInqVarSize
      end interface
      interface
        subroutine vlistDefIndex(vlistID,varID,levID,index) bind(c,name='vlistDefIndex')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levID
          integer(kind=c_int), value :: index
        end subroutine vlistDefIndex
      end interface
      interface
        function vlistInqIndex(vlistID,varID,levID) bind(c,name='vlistInqIndex')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levID
          integer(kind=c_int) :: vlistInqIndex
        end function vlistInqIndex
      end interface
      interface
        subroutine vlistDefFlag(vlistID,varID,levID,flag) bind(c,name='vlistDefFlag')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levID
          integer(kind=c_int), value :: flag
        end subroutine vlistDefFlag
      end interface
      interface
        function vlistInqFlag(vlistID,varID,levID) bind(c,name='vlistInqFlag')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levID
          integer(kind=c_int) :: vlistInqFlag
        end function vlistInqFlag
      end interface
      interface
        function vlistFindVar(vlistID,fvarID) bind(c,name='vlistFindVar')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: fvarID
          integer(kind=c_int) :: vlistFindVar
        end function vlistFindVar
      end interface
      interface
        function vlistFindLevel(vlistID,fvarID,flevelID) bind(c,name='vlistFindLevel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: fvarID
          integer(kind=c_int), value :: flevelID
          integer(kind=c_int) :: vlistFindLevel
        end function vlistFindLevel
      end interface
      interface
        function vlistMergedVar(vlistID,varID) bind(c,name='vlistMergedVar')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistMergedVar
        end function vlistMergedVar
      end interface
      interface
        function vlistMergedLevel(vlistID,varID,levelID) bind(c,name='vlistMergedLevel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: levelID
          integer(kind=c_int) :: vlistMergedLevel
        end function vlistMergedLevel
      end interface
      interface
        subroutine vlistDefVarEnsemble(vlistID,varID,ensID,ensCount,forecast_type) bind(c,name='vlistDefVarEnsemble')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: ensID
          integer(kind=c_int), value :: ensCount
          integer(kind=c_int), value :: forecast_type
        end subroutine vlistDefVarEnsemble
      end interface
      interface
        function vlistInqVarEnsemble(vlistID,varID,ensID,ensCount,forecast_type) bind(c,name='vlistInqVarEnsemble')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), intent(out) :: ensID
          integer(kind=c_int), intent(out) :: ensCount
          integer(kind=c_int), intent(out) :: forecast_type
          integer(kind=c_int) :: vlistInqVarEnsemble
        end function vlistInqVarEnsemble
      end interface
      interface
        subroutine cdiClearAdditionalKeys() bind(c,name='cdiClearAdditionalKeys')
        end subroutine cdiClearAdditionalKeys
      end interface
      interface
        subroutine cdiDefAdditionalKey(string) bind(c,name='cdiDefAdditionalKey')
          import :: c_char
          character(kind=c_char), dimension(*) :: string
        end subroutine cdiDefAdditionalKey
      end interface
      interface
        subroutine vlistDefVarIntKey(vlistID,varID,name,value) bind(c,name='vlistDefVarIntKey')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), value :: value
        end subroutine vlistDefVarIntKey
      end interface
      interface
        subroutine vlistDefVarDblKey(vlistID,varID,name,value) bind(c,name='vlistDefVarDblKey')
          import :: c_int,c_char,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          real(kind=c_double), value :: value
        end subroutine vlistDefVarDblKey
      end interface
      interface
        function vlistHasVarKey(vlistID,varID,name) bind(c,name='vlistHasVarKey')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int) :: vlistHasVarKey
        end function vlistHasVarKey
      end interface
      interface
        function vlistInqVarDblKey(vlistID,varID,name) bind(c,name='vlistInqVarDblKey')
          import :: c_int,c_char,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          real(kind=c_double) :: vlistInqVarDblKey
        end function vlistInqVarDblKey
      end interface
      interface
        function vlistInqVarIntKey(vlistID,varID,name) bind(c,name='vlistInqVarIntKey')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int) :: vlistInqVarIntKey
        end function vlistInqVarIntKey
      end interface
      interface
        function vlistInqNatts(vlistID,varID,nattsp) bind(c,name='vlistInqNatts')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), intent(out) :: nattsp
          integer(kind=c_int) :: vlistInqNatts
        end function vlistInqNatts
      end interface
      interface
        function vlistInqAtt(vlistID,varID,attrnum,name,typep,lenp) bind(c,name='vlistInqAtt')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: attrnum
          character(kind=c_char), dimension(*) :: name
          integer(kind=c_int), intent(out) :: typep
          integer(kind=c_int), intent(out) :: lenp
          integer(kind=c_int) :: vlistInqAtt
        end function vlistInqAtt
      end interface
      interface
        function vlistDelAtt(vlistID,varID,name) bind(c,name='vlistDelAtt')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
